chore: added final auto generate schema
